<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/parentView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gpc_sunset"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fitsSystemWindows="true"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="@dimen/_16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <eightbitlab.com.blurview.BlurView
                    android:id="@+id/login_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/_24dp"
                    android:paddingBottom="@dimen/_24dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/email_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_24dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toTopOf="@+id/password_et">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/number"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                android:background="@android:color/transparent"
                                android:textSize="@dimen/_input_text" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/password_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_24dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/email_et"
                            app:layout_constraintBottom_toTopOf="@+id/loginButton">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:inputType="textPassword"
                                android:hint="@string/password"
                                android:textSize="@dimen/_input_text"
                                android:background="@android:color/transparent" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/loginButton"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/button_height"
                            android:text="@string/login"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/button_text_size"
                            android:elevation="@dimen/button_elevation"
                            android:backgroundTint="@color/colorPrimary"
                            android:background="@drawable/button_background"
                            android:layout_marginTop="@dimen/_24dp"
                            app:layout_constraintTop_toBottomOf="@+id/password_et" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </eightbitlab.com.blurview.BlurView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>